# FG-Notation

./: Cargo.toml  README.md
src/: abbreviated.rs  lib.rs  main.rs  numpad.rs
