[package]
name = "fg-notation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
pretty_assertions = "1.3.0"
